tests/types/errors/compound_assign_to_const.mog
const total i32 = 1
total += 2
